--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "cookie": "^0.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.4",
     "uuid": "^9.0.0"
   }
