--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "dotenv": "^16.0.3",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.16.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/uuid": "^9.0.1",
     "@vitejs/plugin-react": "^3.1.0",
     "react-router-dom": "^6.10.0",
     "typescript": "^4.9.3",
