--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "uuid": "^9.0.0"
